--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fire/fcm-php",
+    "name": "leonzhang2008/fcm-php",
     "description": "fcm",
     "type": "library",
     "license": "MIT",
